# sensor-server

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml
return-box/: logger.py  main.py  uart.py
sensor-server/: face.py  logger.py  main.py  private_key.pem  pub_key.pem  rfid.py  server.py  signature.py  state.py  uart.py  worker.py
sensor-server/face/: gen_aligned.py  gen_feature.py  recognize.py
