[tool.poetry]
name = "poetry-new-project"
version = "0.1.0"
description = ""
authors = ["Reo Hakuta <reonaldhkt+webs@gmail.com>"]
readme = "README.md"
packages = [{include = "sensor-server"}]

[tool.poetry.dependencies]
python = "^3.11"
face-recognition = "^1.3.0"
opencv-python = "^4.7.0.72"
rich = "^13.4.1"
pendulum = "^2.1.2"
rsa = "^4.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
