[tool.poetry]
name = "poetry-new-project"
version = "0.1.0"
description = ""
authors = ["Reo Hakuta <reonaldhkt+webs@gmail.com>"]
readme = "README.md"
packages = [{include = "sensor-server"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "4.8.0.76"
rich = "^13.4.1"
pydantic = "^1.10.9"
pendulum = "^2.1.2"
rsa = "^4.9"
flask = "^2.3.2"
mfrc522 = "^0.0.7"
pyserial = "^3.5"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
